--- a/android/src/main/res/layout-sw600dp/azure_communication_ui_calling_call_header.xml
+++ b/android/src/main/res/layout-sw600dp/azure_communication_ui_calling_call_header.xml
@@ -2,7 +2,7 @@
    Copyright (c) Microsoft Corporation. All rights reserved.
    Licensed under the MIT License.
   -->
-<com.azure.android.communication.ui.calling.presentation.fragment.calling.header.InfoHeaderView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.acs_plugin.calling.presentation.fragment.calling.header.InfoHeaderView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/azure_communication_ui_call_floating_header"
     android:layout_width="380dp"
@@ -122,5 +122,5 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/azure_communication_ui_calling_ic_fluent_people_24_selector"
         />
-</com.azure.android.communication.ui.calling.presentation.fragment.calling.header.InfoHeaderView>
+</com.acs_plugin.calling.presentation.fragment.calling.header.InfoHeaderView>
 
