--- a/android/src/main/res/layout/azure_communication_ui_calling_activity_call_composite.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_activity_call_composite.xml
@@ -7,7 +7,7 @@
     android:id="@+id/azure_communication_ui_root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.azure.android.communication.ui.calling.presentation.CallCompositeActivity"
+    tools:context="com.acs_plugin.calling.presentation.CallCompositeActivity"
     >
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/azure_communication_ui_fragment_container_view"
