--- a/android/src/main/res/layout/azure_communication_ui_calling_lobby_header.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_lobby_header.xml
@@ -2,7 +2,7 @@
    Copyright (c) Microsoft Corporation. All rights reserved.
    Licensed under the MIT License.
   -->
-<com.azure.android.communication.ui.calling.presentation.fragment.calling.lobby.LobbyHeaderView
+<com.acs_plugin.calling.presentation.fragment.calling.lobby.LobbyHeaderView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/azure_communication_ui_calling_lobby_header"
@@ -95,5 +95,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
-</com.azure.android.communication.ui.calling.presentation.fragment.calling.lobby.LobbyHeaderView>
+</com.acs_plugin.calling.presentation.fragment.calling.lobby.LobbyHeaderView>
 
