--- a/android/src/main/res/layout/azure_communication_ui_calling_toast_notification.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_toast_notification.xml
@@ -2,7 +2,7 @@
    Copyright (c) Microsoft Corporation. All rights reserved.
    Licensed under the MIT License.
   -->
-<com.azure.android.communication.ui.calling.presentation.fragment.calling.notification.ToastNotificationView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.acs_plugin.calling.presentation.fragment.calling.notification.ToastNotificationView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/azure_communication_ui_calling_toast_notification"
     android:layout_width="wrap_content"
@@ -22,5 +22,5 @@
         >
     </LinearLayout>
 
-</com.azure.android.communication.ui.calling.presentation.fragment.calling.notification.ToastNotificationView>
+</com.acs_plugin.calling.presentation.fragment.calling.notification.ToastNotificationView>
 
