--- a/android/src/main/res/layout/azure_communication_ui_calling_toolbar.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_toolbar.xml
@@ -2,7 +2,7 @@
    Copyright (c) Microsoft Corporation. All rights reserved.
    Licensed under the MIT License.
   -->
-<com.azure.android.communication.ui.calling.presentation.fragment.setup.components.ToolbarView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.acs_plugin.calling.presentation.fragment.setup.components.ToolbarView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/azure_communication_setup_toolbar"
     android:layout_width="match_parent"
@@ -61,4 +61,4 @@
             />
     </LinearLayout>
 
-</com.azure.android.communication.ui.calling.presentation.fragment.setup.components.ToolbarView>
+</com.acs_plugin.calling.presentation.fragment.setup.components.ToolbarView>
