--- a/android/src/main/res/layout/azure_communication_ui_calling_upper_message_bar_notification.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_upper_message_bar_notification.xml
@@ -2,7 +2,7 @@
    Copyright (c) Microsoft Corporation. All rights reserved.
    Licensed under the MIT License.
   -->
-<com.azure.android.communication.ui.calling.presentation.fragment.calling.notification.UpperMessageBarNotificationView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.acs_plugin.calling.presentation.fragment.calling.notification.UpperMessageBarNotificationView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/azure_communication_ui_calling_upper_message_bar_notification"
@@ -63,5 +63,5 @@
         app:srcCompat="@drawable/azure_communication_ui_calling_ic_fluent_dismiss_24_regular"
         app:tint="@color/azure_communication_ui_calling_color_call_diagnostic_notification_icon"
         />
-</com.azure.android.communication.ui.calling.presentation.fragment.calling.notification.UpperMessageBarNotificationView>
+</com.acs_plugin.calling.presentation.fragment.calling.notification.UpperMessageBarNotificationView>
 
