--- a/android/src/main/res/layout/azure_communication_ui_calling_upper_message_bar_notification_layout.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_upper_message_bar_notification_layout.xml
@@ -2,7 +2,7 @@
    Copyright (c) Microsoft Corporation. All rights reserved.
    Licensed under the MIT License.
   -->
-<com.azure.android.communication.ui.calling.presentation.fragment.calling.notification.UpperMessageBarNotificationLayoutView xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.acs_plugin.calling.presentation.fragment.calling.notification.UpperMessageBarNotificationLayoutView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/azure_communication_ui_calling_upper_message_bar_notifications_layout"
