--- a/android/src/main/res/layout/azure_communication_ui_calling_fragment_setup.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_fragment_setup.xml
@@ -2,7 +2,8 @@
    Copyright (c) Microsoft Corporation. All rights reserved.
    Licensed under the MIT License.
   -->
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/azure_communication_ui_setup_frame_layout"
@@ -10,16 +11,14 @@
     android:layout_height="match_parent"
     android:background="@color/azure_communication_ui_calling_color_background"
     android:gravity="center_horizontal"
+    tools:context="com.acs_plugin.calling.presentation.fragment.setup.SetupFragment">
 
-    tools:context="com.acs_plugin.calling.presentation.fragment.setup.SetupFragment"
-    >
-
-    <include layout="@layout/azure_communication_ui_calling_toolbar"
+    <include
+        layout="@layout/azure_communication_ui_calling_toolbar"
         app:layout_constraintBottom_toTopOf="@+id/azure_communication_ui_setup_video_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/azure_communication_ui_setup_video_layout"
