--- a/android/src/main/res/layout/azure_communication_ui_calling_toolbar.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_toolbar.xml
@@ -2,63 +2,64 @@
    Copyright (c) Microsoft Corporation. All rights reserved.
    Licensed under the MIT License.
   -->
-<com.acs_plugin.calling.presentation.fragment.setup.components.ToolbarView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.acs_plugin.calling.presentation.fragment.setup.components.ToolbarView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/azure_communication_setup_toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/azure_communication_ui_calling_color_background"
-    android:minHeight="40dp"
+    android:background="@color/white">
 
-    android:focusable="false"
-    android:orientation="horizontal"
-    android:gravity="center"
-    android:elevation="@dimen/azure_communication_ui_calling_setup_toolbar_elevation"
-    >
-
-    <ImageButton
-        android:id="@+id/azure_communication_ui_navigation_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/azure_communication_ui_calling_color_background"
-        android:contentDescription="@string/azure_communication_ui_calling_call_setup_toolbar_navigation_button_announcement"
-        android:focusable="true"
-        android:src="@drawable/azure_communication_ui_calling_ic_fluent_arrow_left_24_filled"
-        android:importantForAccessibility="yes"
-        android:padding="8dp"
-        />
-
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:orientation="vertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content">
 
-        <TextView
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/azure_communication_ui_navigation_button"
+            android:layout_width="@dimen/button_height_32dp"
+            android:layout_height="@dimen/button_height_32dp"
+            android:layout_marginStart="@dimen/margin_12dp"
+            android:layout_marginTop="@dimen/margin_8dp"
+            android:padding="@dimen/padding_4dp"
+            android:background="@drawable/bg_light_pink_rounder_6dp"
+            app:srcCompat="@drawable/ic_arrow_back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/azure_communication_ui_toolbar_title"
-            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:focusable="true"
             android:accessibilityHeading="true"
-            android:textColor="@color/azure_communication_ui_calling_color_action_bar_text"
             android:importantForAccessibility="yes"
-            />
+            android:text="@string/start_your_call"
+            style="@style/Text.CircularStdBold.24sp"
+            app:layout_constraintTop_toTopOf="@id/azure_communication_ui_navigation_button"
+            app:layout_constraintBottom_toBottomOf="@id/azure_communication_ui_navigation_button"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/azure_communication_ui_toolbar_subtitle"
-            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:layout_marginTop="@dimen/margin_12dp"
+            android:layout_marginHorizontal="@dimen/margin_12dp"
+            android:layout_marginBottom="@dimen/margin_16dp"
+            android:gravity="center"
             android:focusable="true"
-            android:textColor="@color/azure_communication_ui_calling_color_action_bar_subtext"
-            android:visibility="gone"
+            android:accessibilityHeading="true"
             android:importantForAccessibility="yes"
-            />
-    </LinearLayout>
+            android:text="@string/check_your_video_audio"
+            style="@style/Text.CircularStdBook.16sp"
+            app:layout_constraintTop_toBottomOf="@id/azure_communication_ui_toolbar_title"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.acs_plugin.calling.presentation.fragment.setup.components.ToolbarView>
