--- a/android/src/main/res/layout/azure_communication_ui_calling_fragment_setup.xml
+++ b/android/src/main/res/layout/azure_communication_ui_calling_fragment_setup.xml
@@ -25,7 +25,7 @@
         android:layout_height="0dp"
         android:background="@color/light_purple"
         android:layout_marginBottom="@dimen/margin_minus_12dp"
-        app:layout_constraintBottom_toTopOf="@id/actionsLayer"
+        app:layout_constraintBottom_toTopOf="@id/setup_actions_layer"
         app:layout_constraintTop_toBottomOf="@id/azure_communication_setup_toolbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -97,7 +97,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/actionsLayer"
+        android:id="@+id/setup_actions_layer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:paddingVertical="@dimen/padding_16dp"
@@ -117,7 +117,7 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/setupMicButton"
+                android:id="@+id/setup_mic_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/padding_8dp"
@@ -125,7 +125,7 @@
                 app:srcCompat="@drawable/ic_microphone_off" />
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/setupCameraButton"
+                android:id="@+id/setup_camera_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_8dp"
@@ -134,7 +134,7 @@
                 app:srcCompat="@drawable/ic_camera_off" />
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/setupCameraSwitchButton"
+                android:id="@+id/setup_camera_switch_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_8dp"
@@ -143,7 +143,7 @@
                 app:srcCompat="@drawable/ic_camera_reverse" />
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/setupBlurButton"
+                android:id="@+id/setup_blur_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_8dp"
@@ -157,7 +157,7 @@
                 android:layout_weight="1" />
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/setupAudioButton"
+                android:id="@+id/setup_audio_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/padding_8dp"
@@ -166,15 +166,40 @@
 
         </com.acs_plugin.calling.presentation.fragment.setup.components.SetupControlBarView>
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/user_name_edit_text_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.55" />
+        
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/setup_user_name_edit_text"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/button_height_44dp"
+            android:layout_marginTop="@dimen/margin_8dp"
+            android:layout_marginStart="@dimen/margin_16dp"
+            android:paddingHorizontal="@dimen/padding_12dp"
+            android:background="@drawable/bg_input_rounded_r6"
+            android:textAppearance="@style/Text.CircularStdBook.16sp"
+            android:textColor="@color/text_primary"
+            android:hint="@string/user_name"
+            android:gravity="center_vertical"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/user_name_edit_text_guideline"
+            app:layout_constraintTop_toBottomOf="@id/azure_communication_ui_setup_buttons" />
+
         <com.acs_plugin.calling.presentation.fragment.setup.components.JoinCallButtonHolderView
             android:id="@+id/azure_communication_ui_setup_join_call_holder"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_height="@dimen/button_height_44dp"
+            android:layout_marginTop="@dimen/margin_8dp"
+            android:layout_marginStart="@dimen/margin_8dp"
+            android:layout_marginEnd="@dimen/margin_16dp"
             app:layout_constraintTop_toBottomOf="@+id/azure_communication_ui_setup_buttons"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="@id/user_name_edit_text_guideline">
 
             <com.microsoft.fluentui.widget.Button
                 android:id="@+id/azure_communication_ui_setup_join_call_button"
@@ -190,8 +215,7 @@
                 app:layout_constraintBottom_toBottomOf="@+id/azure_communication_ui_setup_start_call_button_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/azure_communication_ui_setup_start_call_button_text"
-                />
+                app:layout_constraintTop_toTopOf="@+id/azure_communication_ui_setup_start_call_button_text" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/azure_communication_ui_setup_start_call_button_text"
@@ -211,8 +235,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ProgressBar
                 android:id="@+id/azure_communication_ui_setup_start_call_progress_bar"
@@ -227,8 +250,7 @@
                 android:layout_marginEnd="8dp"
                 android:indeterminateTint="?attr/azure_communication_ui_calling_primary_color"
                 android:visibility="gone"
-                tools:visibility="visible"
-                />
+                tools:visibility="visible" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/azure_communication_ui_setup_start_call_joining_text"
@@ -249,8 +271,7 @@
                 android:text="@string/azure_communication_ui_calling_setup_view_button_connecting_call"
                 android:textColor="@color/azure_communication_ui_calling_color_text_primary"
                 android:visibility="gone"
-                tools:visibility="visible"
-                />
+                tools:visibility="visible" />
 
         </com.acs_plugin.calling.presentation.fragment.setup.components.JoinCallButtonHolderView>
 
